# game-engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
benchmark/: CMakeLists.txt  test_ecs.cpp
cmake/: BuildShaders.cmake  FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_ttf.cmake
include/: Device.h  GLWFTest.h  GameEngine.h  InputDefinitions.h  Pipeline.h  Scene.h  SceneManager.h  Window.h  camera.h  device.h  example_app.h  game_object.h  model.h  pipeline.h  render_system.h  renderer.h  swap_chain.h  window.h
include/core/: Application.h  application.h  timer.h
include/deprecated/: InputManager.h  RenderManager.h  Timer.h
include/ecs/: allocator.hpp  component.hpp  component_manager.hpp  coordinator.h  coordinator_builder.inl  ecs.inl  entity.hpp  entity_manager.h  linear_allocator.hpp  system.hpp  system_builder.inl  system_manager.hpp
include/memory/: allocator.hpp  linear_allocator.hpp  pointer_math.inl  pool_allocator.hpp  stack_allocator.hpp
shaders/: simple_shader.frag  simple_shader.vert
src/: CMakeLists.txt  Device.cpp  GLWFTest.cpp  GameEngine.cpp  InputManager.cpp  Pipeline.cpp  RenderManager.cpp  SceneManager.cpp  Timer.cpp  Window.cpp  camera.cpp  device.cpp  example_app.cpp  game_engine.ixx  game_object.cpp  model.cpp  pipeline.cpp  render_system.cpp  renderer.cpp  swap_chain.cpp  window.cpp
src/asset/: asset.ixx
src/asset/api/: api.ixx  asset_manager.cppm
src/asset/sdl/: asset_manager.cppm  sdl.ixx
src/core/: Application.cpp  CMakeLists.txt  Timer.cpp  application.cpp  application.cppm  core.ixx  scene.ixx  scene_manager.cppm  timer.cpp  timer.cppm
src/core/vulkan/: application.cppm
src/deprecated/: GameEngine.cpp  InputManager.cpp  RenderManager.cpp  SceneManager.cpp  Timer.cpp
src/ecs/: CMakeLists.txt  allocator.cpp  component.cpp  component.cppm  component_lookup_table.cppm  component_manager.cpp  component_manager.cppm  coordinator.cpp  coordinator.cppm  ecs.ixx  entity.cpp  entity.ixx  entity_manager.cpp  entity_manager.cppm  linear_allocator.cpp  system.cppm  system_manager.cpp  system_manager.cppm
src/error/: error.ixx
src/gfx/: camera.cppm  device.cppm  game_object.cppm  gfx.ixx  model.cppm  pipeline.cppm  render_system.cppm  renderer.cppm  swap_chain.cppm  window.cppm
src/gfx/api/: api.ixx  color.cppm  rectangle.ixx  renderer.ixx  texture.ixx
src/gfx/sdl/: renderer.cppm  sdl.ixx  texture.cppm
src/gfx/vulkan/: camera.cppm  device.cppm  game_object.cppm  model.cppm  pipeline.cppm  render_system.cppm  renderer.cppm  swap_chain.cppm  vulkan.ixx  window.cppm
src/input/: input.ixx
src/input/api/: api.ixx  input_manager.ixx
src/input/sdl/: input_manager.cppm  sdl.ixx
src/memory/: CMakeLists.txt  allocator.cpp  allocator.ixx  block_allocator.cppm  chunk_allocator.cppm  linear_allocator.cpp  linear_allocator.cppm  memory.ixx  pointer_math.ixx  pool_allocator.cpp  pool_allocator.cppm  stack_allocator.cpp  stack_allocator.cppm
test/: CMakeLists.txt
test/memory/: linear_allocator_test.cpp  pool_allocator_test.cpp  stack_allocator_test.cpp  test_pointer_math.cpp
